--- a/doc/simple_example.ipynb
+++ b/doc/simple_example.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Diatomic Eigenvalue Computations with the \"Diatomic\" package"
+    "## Diatomic Eigenvalue Computations with the **Diatomic** package"
    ]
   },
   {
