--- a/test.ipynb
+++ b/test.ipynb
@@ -19,11 +19,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "$$\n",
+    "T_{ij} = \\frac{\\hbar^2}{2\\mu \\Delta R^2} \\times \\begin{cases} \\frac{5}{2}, & j = i\\\\ -\\frac{4}{3}, & j = i\\pm 1\\\\ \\frac{1}{12}, & j = i\\pm 2 \\end{cases}\n",
+    "$$"
+   ]
   }
  ],
  "metadata": {
