--- a/doc/simple_example_Morse_H2.ipynb
+++ b/doc/simple_example_Morse_H2.ipynb
@@ -4,16 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Diatomic Eigenvalue Computations with the **Diatomic** package\n",
+    "# Example: calculating the energy levels of $H_2$ molecule\n",
     "\n",
-    "This notebook will provide a simple example (step-by-step) of how to use the **Diatomic** library to calculate the energy eigenvalues of $H_2$ molecule."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Import the library"
+    "This notebook will demonstrate how to use the DiAtomic library to calculate the energy eigenvalues of $H_2$ molecule."
    ]
   },
   {
@@ -31,7 +24,7 @@
    "source": [
     "### Create the Molecule Data object\n",
     "\n",
-    "Instantiate the object and provide the neccessary input information regarding the molecule under consideration which to be used in the following computations like \n",
+    "Instantiate the Molecule Data object and provide the neccessary input information which to be used in the following computations like \n",
     "- the chemical symbol of the molecule\n",
     "- the isotope(s) to be computed\n",
     "- the rotational qunatum numbers\n",
@@ -182,6 +175,13 @@
     "      8   7   25866.323436     0.0     0      1     1.000      1      0     0.00\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -200,7 +200,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
